template.pdf-->draft_v1.3.pdf

--- a/paper/ApJtemplate/sections/Introductions.tex
+++ b/paper/ApJtemplate/sections/Introductions.tex
@@ -9,7 +9,27 @@ While there is no doubt that star formation processes also have ability to drive
 
 These studies have used only one-dimensional spectra and therefore provide no insight on the spatial extent or structure of the outflows. Even for long-slit spectroscopy one only obtain a spectrum of the light that actually passes through the slit(all other light is lost). However, the spatial information is crucial to study the outflow, such as the sphere of influence, kinematic energy and momentum. These information help to understand how feedback influence evolution of host galaxy, furthermore, how it change the large-scale kinematics environment. The spatial resolved emission(absorption)-line profile may provide information about how feedback change the chemical environment of ICM and CGM and constrain the theoretical models. So Integral field spectroscopy(IFS) observation is a powerful tool for studying outflows. \cite{harrison2014kiloparsec} used integral field unit(IFU) observations covering OIII$\lambda \lambda 4959,5007$ and H$\beta$ emission lines to study the outflows of 16 type-2 AGN at z<0.2, they found high-velocity ionized gas with observed spatial extents of 6-16kpc. their study demonstrates that galaxy-wide energetic outflows are not confined to the most extreme star-forming galaxies or radio-luminous AGN. \cite{rupke2019100} shows optical integral field observations of the low-redshift galaxy SDSS J211824.06+001729.4 with KCWI, the OII lines at wavelengths of 3726 and 3729 angstroms reveal an ionized outflow spanning 80 by 100 square kiloparsecs. 
 
-Comparing with low-redshift observation, observation for high-redshift outflow is insufficient in contrast to dramatic galaxy evolution at this epoch. Several pieces of observational evidence suggest that the most dramatic galaxy evolution occurred at high redshift($z \approx 1-3$). Firstly, the cosmic space density of BH growth peaks at $z \approx 1-2$ while over half of the integrated BH growth occurred around these redshift(\cite{schmidt1983quasar};\cite{richards2006sloan}). Secondly, the peak density of the most intensely star-forming galaxies is at $z \approx 2$(\cite{chapman2005redshift};\cite{wardlow2011laboca}), with the peak in cosmic star formation density occurring at the same stage(\cite{madau1996high};\cite{lilly1999canada};\cite{madau2014cosmic}). Studies of local galaxies have also suggested that massive galaxies formed the bulk of their stars at high redshift($z \geqslant 1-2$ ). In conclusion, this is an essential stage for galaxy evolution, outflow observation of this epoch is crucial to reveal how galaxies co-evolve with their environments.  %However, the observation on large scale(CGM scale) of outflows for high-redshift quasars, which is a key factor to study how outflow change the halo environment of host galaxy, is always limited by instrument(field of view, depth etc.). 
+Comparing with low-redshift observation, observation for high-redshift outflow is insufficient in contrast to dramatic galaxy evolution at this epoch. Several pieces of observational evidence suggest that the most dramatic galaxy evolution occurred at high redshift($z \approx 1-3$). Firstly, the cosmic space density of BH growth peaks at $z \approx 1-2$ while over half of the integrated BH growth occurred around these redshift(\cite{schmidt1983quasar};\cite{richards2006sloan}). Secondly, the peak density of the most intensely star-forming galaxies is at $z \approx 2$(\cite{chapman2005redshift};\cite{wardlow2011laboca}), with the peak in cosmic star formation density occurring at the same stage(\cite{madau1996high};\cite{lilly1999canada};\cite{madau2014cosmic}). Studies of local galaxies have also suggested that massive galaxies formed the bulk of their stars at high redshift($z \geqslant 1-2$ ). In conclusion, this is an essential stage for galaxy evolution, outflow observation of this epoch is crucial to reveal how galaxies co-evolve with their environments. 
 
-%In this paper we present Keck Cosmic Web Imager(KCWI) blue sensitive Integral Field Spectrometer(IFS) observation of MAMMOTH-1 which is the denest region ever seen at $z \approx 2$. In section 2 we give details of IFU observations, In section 3 we present the results and model used to estimate outflow energy. Finally we discuss the ly$\alpha$ nebula and the possible mechanism to power the strong outflow, and give a brief summary in section 5. Throughout this paper, we assume a flat cosmological model with $\omega_{\Lambda}=0.7$,$\omega_{m}=0.3$ and $H_{0}=70 km/s/Mpc$. In this cosmology, 1"$ \approx 8.2$kpc at z=2.3.
+Motivated by the above reasons, in this paper we report a follow-up observation on the famous overdensity field centering on BOSS1441 with Keck Cosmic Web Imager(KCWI). This is an extremely overdense region at $z \approx 2.3$ known as MAMMOTH-1 which was found by \cite{cai2015mapping}. He shows that BOSS1441 has an Ly$\alpha$ emitter(LAE) obverdensity $\delta \approx 10$. Also, the Mayall-4m telescope NB imaging shows that an extreme ly$\alpha$ nebulae with projected size$\geqslant$ 400kpc covers this region(\cite{cai2017discovery}). All of this shows this is a very interesting field at high redshift. In Section 2 we give details of IFU observations. In Section 3 we present the results and model used to estimate outflow energy and in Section 4 we discuss the ly$\alpha$ nebula and the possible mechanism to power the strong outflow. Finally we give a brief summary in Section 5. Throughout this paper, we assume a flat cosmological model with $\omega_{\Lambda}=0.7$,$\omega_{m}=0.3$ and $H_{0}=70 km/s/Mpc$. In this cosmology, 1"$ \approx 8.2$kpc at z=2.3.
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+%In this paper we present Keck Cosmic Web Imager(KCWI) blue sensitive Integral Field Spectrometer(IFS) observation of MAMMOTH-1 which is the denest region ever seen at $z \approx 2$. In Section 2 we give details of IFU observations, In Section 3 we present the results and model used to estimate outflow energy. Finally we discuss the ly$\alpha$ nebula and the possible mechanism to power the strong outflow, and give a brief summary in Section 5. Throughout this paper, we assume a flat cosmological model with $\omega_{\Lambda}=0.7$,$\omega_{m}=0.3$ and $H_{0}=70 km/s/Mpc$. In this cosmology, 1"$ \approx 8.2$kpc at z=2.3.
 \end{document}
