--- a/paper/ApJtemplate/sections/discussion_sections/galaxymerger.tex
+++ b/paper/ApJtemplate/sections/discussion_sections/galaxymerger.tex
@@ -8,8 +8,8 @@
 	Futhermore, from the velocity and dispersion map we see that the region with large dispersion extent to G-5 and there's also obvious velocity gradient on either side of G-5. This clue indicates that there may be also outflow from G-5. The large dispersion also support this point.  
 	\begin{figure*}
 		\centering
-		\subfloat{\includegraphics[width=0.5\textwidth]{figs/P_coup_SF}}
-		\subfloat{\includegraphics[width=0.5\textwidth]{figs/P_coup_AGN}}
+		\subfloat{\includegraphics[width=0.5\textwidth]{figs/P_outSF_vs_L_AGN}}
+		\subfloat{\includegraphics[width=0.5\textwidth]{figs/P_outAGN_vs_L_AGN}}
 		\label{coupeffic}
 		\caption{Left: momentum rates of the outflows($\dot{P_{out}}$ normalized to the star formation luminosity $L_{SF}/c$ versus AGN luminosity. The dashed lines represent the required optical depths if the outflows are driven by radiation pressure from star formation. Right: momentum rate of outflows normalized to AGN luminosity($L_{AGN}/c$) versus AGN luminosity. Based on our assumptions, the outflows are unlikely to be purely radiatively driven, the ratio is also to high for theoretical predictions of energy-driven outflows launched by AGN accretion-disc wind.}
 	\end{figure*}
