--- a/paper/ApJtemplate/sections/discussion_sections/outflowmechanism.tex
+++ b/paper/ApJtemplate/sections/discussion_sections/outflowmechanism.tex
@@ -3,8 +3,8 @@
 \begin{document}
 	\begin{figure*}[htp]
 		\centering
-		\subfloat{\includegraphics[width=0.5\textwidth]{figs/coupleeffi_AGN_SF}}
-		\subfloat{\includegraphics[width=0.5\textwidth]{figs/coupleeffi_AGN}}
+		\subfloat{\includegraphics[width=0.5\textwidth]{figs/cp_AGN_vs_cp_SF}}
+		\subfloat{\includegraphics[width=0.5\textwidth]{figs/cp_AGN_vs_L_AGN}}
 		\label{coupeffic}
 		\caption{Left: the ratio of our estimated outflow kinetic energy rates($E_{out}$) to the AGN luminosity and to the star formation luminosity for our source(red) and sources from \cite{harrison2014kiloparsec}. The dashed vertical line is the estimated maximum mechanical input expected from supernovae and stellar winds. The two solid lines shows the coupling efficiency of 1. Right: Observationally determined kinetic coupling efficiencies in \cite{harrison2018agn} and our result. The vertical lines show the range of values quoted or, in the case of an error bar, the quoted error on the average value. The horizontal lines show the range of bolometric luminosity for each sample. The dotted line shows coupling efficiency of 1. }
 	\end{figure*}
