--- a/paper/ApJtemplate/sections/Observations.tex
+++ b/paper/ApJtemplate/sections/Observations.tex
@@ -4,4 +4,8 @@
 	In this section, we provide details on the KCWI instrument configurations, observations,data reduction pipeline, and post-processing after standard reduction pipeline
 \subsection{KCWI Instrument Configuration}
 Keck Cosmic Web Imager(KCWI) is a general purpose, optical IFS that has been installed on the 10m Keck II telescope. KCWI provides seeing-limited imaging from the wavelength of $3500 \AA - 5700 \AA$, and the spectral resolution can be configured from R=1000 to R=20000. The field of view is $20'' \times 33''$ for large slicer, $16'' \times 20''$ for medium slicer and $8'' \times 20''$ for the small slicer. KCWI is optimal for a survey of gasous nebulae at $z \approx 2$ because: (1) KCWI has a high throughput from $3800 \AA - 4500 \AA$,optimal for probing ly$\alpha$ CIV and HeII lines at $z \approx 2$. (2) KCWI has a high spectral-resolution modes(R>4000) which can resolve the gas kinematics and (3) KCWI has a relatively large field-of-view(FoV) to cover extended ly$\alpha$ nebulae. Futhermore, KCWI nicely complements the characteristics of MUSE which thrives at $\lambda> 5000 \AA$. Data was taken with the Keck/KCWI instrument in November 2017. The seeing varied in the range of 0.7-1.1 arcsec.
+
+The KCWI observations of BOSS1441 were carried out on UT 2018 May, seeing varied in the range of 0.7-1.1 arcsec(FWHM of the Gaussian at $\approx 4000$, measured in thee combined 40 min datacubes). For our program, we configured KCWI with thee BM grating and medium slicer which yields a Field of View(FoV) of 16.8" perpendicular to slicer(24 slicers) and 20" along the slicer. This FoV is sufficient to map the gas around quasar host halo to a radius of $\approx$100kpc at $z \approx 2.3$. This setting can provide a spatial sampling of $\frac{20"}{24 slicers} \approx 0.67"$ along the slicer and is seeing-limited perpendicular to the slicer. The spectral resl=olution is R=4000. we observed at central wavelengths ranging from $\lambda =3900-4100$ to conver the Ly$\alpha$ emission of each quasar in the sample.
+
+The total exposure time for BOSS1441 is 40 minutes which consists of four 10-min individual exposures. 
 \end{document}
