--- a/paper/ApJtemplate/sections/results_sections/kinematics.tex
+++ b/paper/ApJtemplate/sections/results_sections/kinematics.tex
@@ -1,7 +1,7 @@
 \documentclass[../Results.tex]{subfiles}
 
 \begin{document}
-	In this section we present the maps for the flux-weighted velocity centroid and the flux-weighted velocity dispersion of all of the extended emission line to get an indication of the centroid velocity and width of the emission line for each spatial location. Different emission line traces different gas component. We use ly$\alpha$ to trace cool gas($10^{4}$K) and use CIV($\lambda1549$),HeII($\lambda1640$) emission to trace warm gas($10^{5}$K).  These resolved kinematic maps give us the opportunity to detect kinematic patterns, e.g. evidence for rotation, inflows or outflows and help us to have a deep insight look to the physics of this nebula. We filter the spectra with lowpass filter to reduce the noise, this procedure can help us to construct a more clear velocity and velocity dispersion map, we show the results in Fig. \ref{kinematicsmap}
+	In this section we present maps of the flux-weighted velocity centroid and the flux-weighted velocity dispersion for the three emission line to get an indication of the centroid velocity and width of the emission line for each spatial location. Different emission line traces different gas component. We use ly$\alpha$ to trace cool gas($10^{4}$K) and use CIV($\lambda1549$),HeII($\lambda1640$) emission to trace warm gas($10^{5}$K).  These resolved kinematic maps give us the opportunity to the kinematic structure of this area, evidence for rotation, inflows or outflows and help us to have a deep insight look to the physics of this nebula. We filter the spectra with lowpass filter to reduce the noise, this procedure can help us to construct a more clear velocity and velocity dispersion map, we show the results in Fig. \ref{kinematicsmap}
 	 \begin{figure*}[htp]
 		\centering
 		\includegraphics[width=\textwidth]{figs/emissionmap}
@@ -9,7 +9,9 @@
 		\caption{Left: continuum-subtracted psudo-narrow band images for the 3 emissions. We select regions $> 1.5\sigma$ in each slice and stack these slices together. The contour represent signal-to-noise ratio(SNR), for ly$\alpha$ is ($5\sigma,9\sigma,18\sigma,30\sigma,42\sigma,51\sigma$), for HeII is ($3\sigma,5,9\sigma$) and for CIV is ($4\sigma,7\sigma,9\sigma$). Middle: flux-weighted velocity map with respect to the systemic redshift of MAMMOTH-1. Right: flux-weighted velocity dispersion also with respect to systemic redshift of MAMMOTH-1. We also mark sources in the field with cross.}
 	\end{figure*}
 	
-	Fig. \ref{kinematicsmap} shows the results. Left panel is the continuum-subtracted, pseudo-narrowband image, contour reperesents the SNR levels. Middle panel shows velocity maps and right panel is velocity dispersion map. Ly$\alpha$ shows 2 peaks, one is around source-B the other is around G-5, moreover we we also see significant velocity gradient close to these 2 peaks in ly$\alpha$ velocity map. Besides, dispersion map also reveals relatively large $\sigma_{v}$ around these 2 sources. The 2 clues indicate source-B and G-5 both have outflows. To have a deep insight, we bin the data cube with interval length of 200km/s and show the results in Fig. \ref{slices}. It shows significant separate red and blue component on either side of source-B. As for G-5, the red component is significant but the blue component is relatively weak. 
+	Left panel is the continuum-subtracted, pseudo-narrowband image, contours represent the SNR levels. Middle panel shows velocity maps and right panel is velocity dispersion map. It is clear that all of the three velocity map show velocity gradient around Source-B and along the same direction, besides, Ly$\alpha$ emission also presents a extended region around Source-B with dispersion larger($\sigma \approx 600km/s$) than other places. With all of these evidence(extent CIV and HeII emission, clear velocity gradient and large velocity dispersion, also the OIII emission\cite{cai2017discovery}), we think Source-B produces outflow and injects matter and energy into CGM. What is interesting is that the velocity of outflow is still large enough $\approx 500$km/s in a large distance($\approx 100$kpc). Because Source-B is radio quiet, this outflow cannot be driven by jet from AGN, AGN-radiation-driven feedback and star-forming-driven feedback are possible. This may be the first observation for the outflow influence on such large scale at high redshift. In addition, it is also clear seen that velocity map shows velocity gradient around G-5, direction of this velocity gradient is parallel to the connection of the two peaks on each side of G-5, dispersion around G-5 also shows a large value comparing with other regions, these evidences may indicate G-5 also produces outflow.
+	
+	 To have a deep insight, we bin the data cube with interval length of 200km/s and show the results in Fig. \ref{slices}. It shows significant separate red and blue component on either side of source-B. So does G-5, but the signal is relatively weaker than Source-B instead.
 	\begin{figure*}[htp]
 		\centering
 		\includegraphics[width=\textwidth]{figs/slices}
