--- a/paper/ApJtemplate/template.bib
+++ b/paper/ApJtemplate/template.bib
@@ -402,3 +402,8 @@
   pages={415--486},
   year={2014},
   publisher={Annual Reviews}}
+  @book{harrison2016observational,
+  title={Observational constraints on the influence of active galactic nuclei on the evolution of galaxies},
+  author={Harrison, Christopher Mark},
+  year={2016},
+  publisher={Springer}}
